# learning-2026

./: main.py  pyproject.toml
25-Day-Agents-Course-by-Google/: README.md
25-Day-Agents-Course-by-Google/Day1/: README.md  introduction_to_agent_vi.md
25-Day-Agents-Course-by-Google/Day2/: README.md
25-Day-Agents-Course-by-Google/Day3/: README.md
25-Day-Agents-Course-by-Google/Day4/: README.md
25-Day-Agents-Course-by-Google/Day5/: README.md
25-Day-Agents-Course-by-Google/Day6/: README.md
25-Day-Agents-Course-by-Google/Day7/: README.md
context_engineering/: NOTE.md
context_engineering/chapter01/: SRL.ipynb  Use_Case.ipynb
context_engineering/chapter02/: MAS_MCP.ipynb  MAS_MCP_v2.ipynb
context_engineering/chapter03/: Context_Aware_MAS.ipynb  RAG_Pipeline.ipynb
context_engineering/chapter04/: Context_Engine.ipynb
graphiti/: 00-overview.md
graphiti/quickstart/: pyproject.toml
sample/feynman_mas/: agent.py
the-modern-software-developer/w1/: five-best-practices-for-prompt-engineering.md  peg_00_template.md  peg_01_llm_settings.md  peg_02_basic_of_prompting.md  peg_03_prompt_elements.md  peg_04_tips_for_design_prompt.md  peg_05_examples_of_prompts.md  peg_06_zero_shot_prompting.md  peg_07_few_short_prompting.md  peg_08_chain_of_thought_prompting.md  peg_09_meta_prompting.md  peg_10_self_consistency.md  peg_11_generated_knowledge_prompting.md  peg_12_prompt_chaining.md  peg_13_tree_of_thoughts.md  peg_14_retrieval_augmented_generation.md  peg_15_automatic_reasoning_and_tool_use.md  peg_16_automatic_prompt_engineer.md  peg_17_active_prompt.md  (+10 more)
(+39 files in other folders)
